--- a/wxApp/shopping/app.json
+++ b/wxApp/shopping/app.json
@@ -1,26 +1,30 @@
 {
   "pages": [
-    "pages/cart/cart",
-    "pages/index/index",
-    "pages/category/category",
     "pages/user/user",
-    "pages/detail/detail"
+    "pages/cart/cart",
+    "pages/category/category",
+    "pages/index/index",
+    "pages/address/address"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#AB956D",
     "navigationBarTitleText": "零食",
-    "navigationBarTextStyle": "white"
+    "navigationBarTextStyle": "white",
+    "enablePullDownRefresh": true
   },
   "tabBar": {
     "color": "#b7b7b7",
     "selectedColor": "#AB956D",
+    "borderStyle": "black",
+    "backgroundColor": "f5f5f5",
+    "selectedindex": 1,
     "list": [
       {
         "pagePath": "pages/index/index",
         "iconPath": "image/12.png",
         "selectedIconPath": "image/11.png",
-        "text": "首页"
+        "text": "主页"
       },
       {
         "pagePath": "pages/category/category",
@@ -42,6 +46,5 @@
       }
     ]
   },
-  "style": "v2",
   "sitemapLocation": "sitemap.json"
 }
